--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
+:root {
+  --background-gradients: linear-gradient(
+    45deg,
+    #8EC5FC,
+    #E0C3FC,
+    #97D9E1,
+    #D9AFD9,
+    #ffd1ff,
+    #fad0c4
+  );
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +17,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: var(--background-gradients);
+  background-size: 400%;
+  animation: gradient-animation 20s infinite alternate;
+}
+
+@keyframes gradient-animation {
+  0% {background-positon: left}
+  100% {background-position: right;}
 }
 
 code {
