--- a/frontend/src/components/GameList.css
+++ b/frontend/src/components/GameList.css
@@ -4,8 +4,12 @@ img{
     height: 200px;
     object-fit: fill;
     aspect-ratio: 1/1;
-    border-radius: 1rem;
-    /* margin-bottom: 1rem; */
+    box-shadow: 10px 15px 20px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+img:hover{
+    cursor: pointer;
 }
 
 .game{
@@ -29,7 +33,6 @@ img{
 }
 
 .front{
-    /* opacity: 0; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,7 +87,6 @@ img{
 
 .game:hover .front{
     transform: translateY(-60%) scale(0.8)
-    /* translateX(-10%); */
 }
 
 .game:hover .background{
@@ -105,7 +107,8 @@ img{
 
 .game-title{
     font-size: 2rem;
-    text-align: center;
+    color: whitesmoke;
+    z-index: 1;
 }
 
 .main-box{
@@ -114,4 +117,8 @@ img{
 
 .game:hover .grid-container {
     background-color: black;
+}
+
+.game-image-selected{
+    border: solid 4px #62B6B7;
 }
