--- a/frontend/src/components/GameRec.css
+++ b/frontend/src/components/GameRec.css
@@ -1,9 +1,16 @@
 img{
     max-width: 100%;
     width: 160px;
-    aspect-ratio: 1/1;
     height: 200px;
-    object-fit: cover;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
+    object-fit: fit;
+    aspect-ratio: 1/1;
+    border-radius: 10px;
+}
+
+.background-box{
+    background: white;
+    min-height: 80vh;
+    width: 60%;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.8), rgba(255,255,255, 0.7));
+    border-radius: 2rem;
 }
