Add GameCard component and Refactor scroll styling

--- a/frontend/src/components/GameList.css
+++ b/frontend/src/components/GameList.css
@@ -63,6 +63,7 @@ img:hover{
     flex: 50%;
     color:aliceblue;
     overflow: scroll;
+    overflow-x: hidden;
     text-align: justify;
     display: -webkit-box;
     -webkit-line-clamp: 8;
