--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,24 @@
   );
 }
 
+::-webkit-scrollbar{
+  width: 0.5em;
+  height: 0.1em;
+}
+
+::-webkit-scrollbar-track{
+  background: #EAC7C7;
+  margin-block: 0.5em;
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #A0C3D2;
+  border-radius: 100vw;
+  border: 0.6rem solid #A0C3D2;
+  background-clip: content-box;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
