--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -1,6 +1,8 @@
-$backgroundGradeint: linear-gradient(0deg, #e96443, #904e95, #ff8e9e);
+// imports and variables
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+$backgroundGradeint: linear-gradient(0deg, #e96443, #904e95, #ff8e9e);
 
+// App.js Styles
 .main-container {
   position: relative;
   z-index: 1;
@@ -9,9 +11,10 @@ $backgroundGradeint: linear-gradient(0deg, #e96443, #904e95, #ff8e9e);
   align-items: center;
   justify-content: center;
   overflow-x: none;
+
+  // Hero Section Styles
   .hero-section {
     width: 100vw;
-    // height: 100%;
     .hero-wrapper {
       width: 100%;
       perspective: 2000;
@@ -50,259 +53,7 @@ $backgroundGradeint: linear-gradient(0deg, #e96443, #904e95, #ff8e9e);
   }
 }
 
-.gamelist-section {
-  position: relative;
-  z-index: 1;
-  width: 100vw;
-  height: 100%;
-  background-image: $backgroundGradeint;
-  background-size: 300%;
-  animation: gradient-animation 20s infinite alternate;
-}
-
-@keyframes gradient-animation {
-  0% {
-    background-position: left;
-  }
-  100% {
-    background-position: right;
-  }
-}
-
-h1,
-p {
-  color: white;
-}
-
-.game-image-selected {
-  width: 106px;
-  height: 150px;
-  object-fit: fill;
-  border: solid 2px red;
-  transition: 250ms;
-}
-
-.game-image {
-  width: 106px;
-  height: 150px;
-  object-fit: fill;
-  aspect-ratio: 1/1;
-  border: solid 2px blue;
-  &:hover {
-    cursor: pointer;
-  }
-  transition: 250ms;
-}
-
-.gamelist-container {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .gamelist-top-text {
-    font-weight: 700;
-    font-size: 4rem;
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
-}
-
-.grid-container {
-  z-index: 4;
-  display: grid;
-  position: relative;
-  align-items: center;
-  gap: 4rem;
-  grid-template-columns: repeat(3, minmax(240px, 1fr));
-  .grid-item {
-    width: 20rem;
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    // background-color: red;
-    .game-title {
-      text-align: justify;
-      font-size: 0.95rem;
-      font-weight: 700;
-    }
-  }
-}
-
-.hover-background {
-  background-color: #234;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  opacity: 0;
-  z-index: -1;
-  transform: scale(1, 1);
-  transition: 250ms ease-in-out;
-  border-radius: 1rem;
-}
-.front {
-  z-index: 3;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  transition: 250ms;
-  overflow: visible;
-}
-
-.back {
-  opacity: 0;
-  display: flex;
-  align-items: flex-start;
-  justify-content: left;
-  flex-direction: column;
-  position: absolute;
-  padding-top: 5px;
-  left: 0;
-  right: 0;
-  padding-right: 5px;
-}
-
-.summary {
-  width: 100%;
-  flex: 50%;
-  color: aliceblue;
-  overflow: scroll;
-  overflow-x: hidden;
-  text-align: justify;
-  display: -webkit-box;
-  -webkit-line-clamp: 8;
-  -webkit-box-orient: vertical;
-}
-
-.score-div {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
-.score {
-  color: aliceblue;
-  text-align: center;
-  background-color: #2376dd;
-  width: 2.5em;
-  height: 1.5em;
-  border-radius: 5em;
-}
-
-.grid-item {
-  &:hover {
-    .front {
-      transform: translateY(-90%) scale(0.8);
-    }
-    .hover-background {
-      opacity: 1;
-      transform: scale(1.2, 1.6);
-    }
-    .back {
-      border-radius: 1rem;
-      opacity: 1;
-      transform: translateY(15%);
-    }
-  }
-}
-
-.recs-container {
-  margin: 5px;
-  padding: 5px;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  min-height: 80vh;
-  height: 80%;
-  width: 60%;
-  border-radius: 1rem;
-  background-color: rgba($color: #fff, $alpha: 0.7);
-  .game-title {
-    padding-top: 5px;
-    text-align: center;
-    color: #234;
-  }
-  h4 {
-    color: #234;
-    font-size: 1.4rem;
-    padding-top: 20px;
-    text-align: center;
-    padding-bottom: 10px;
-  }
-}
-
-.recs {
-  gap: 2rem;
-}
-
-.card-container {
-  background-color: rgba($color: #fff, $alpha: 0.9);
-  width: 70vw;
-  height: 60vh;
-  border-radius: 10px;
-  .card-holder {
-    width: 70vw;
-    height: 60vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 2rem;
-    width: min(95%, 70rem);
-    margin-inline: auto;
-    overflow-y: scroll;
-    .card-title {
-      grid-column: span 4;
-    }
-    .card-img {
-      margin-top: 30px;
-      margin-left: 30px;
-      width: 106px;
-      height: 150px;
-      object-fit: fill;
-      grid-column: span 1;
-      box-shadow: 10px 15px 20px rgba($color: #000000, $alpha: 0.3);
-      border-radius: 10px;
-    }
-    .card-summary {
-      padding-top: 30px;
-      grid-column: span 3;
-      text-align: justify;
-      color: #000;
-    }
-  }
-}
-
-.selected-info {
-  color: whitesmoke;
-  position: fixed;
-  top: 50%;
-  right: 50%;
-  width: 500px;
-  height: 200px;
-  margin-top: -100px;
-  margin-right: -1000px;
-}
-
-.slected-hover-div {
-  position: fixed;
-  top: 50%;
-  right: 50%;
-  width: 520px;
-  height: 30px;
-  margin-top: -105px;
-  margin-right: -1000px;
-  border-radius: 2rem;
-  background-color: #b0235f;
-}
-
+// Hero Section Animation Styles
 .game-control-div {
   position: relative;
   z-index: 2;
@@ -352,4 +103,255 @@ p {
     width: 50px;
     height: 50px;
   }
+}
+
+// GameList Styles
+.gamelist-section {
+  position: relative;
+  z-index: 1;
+  width: 100vw;
+  height: 100%;
+  background-image: $backgroundGradeint;
+  background-size: 300%;
+}
+
+h1,
+p {
+  color: white;
+}
+
+.gamelist-container {
+  height: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .gamelist-top-text {
+    font-weight: 700;
+    font-size: 4rem;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
+.grid-container {
+  z-index: 4;
+  display: grid;
+  position: relative;
+  align-items: center;
+  gap: 4rem;
+  grid-template-columns: repeat(3, minmax(240px, 1fr));
+  .grid-item {
+    width: 20rem;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .game-title {
+      text-align: justify;
+      font-size: 0.95rem;
+      font-weight: 700;
+    }
+  }
+}
+
+.hover-background {
+  background-color: #234;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: 0;
+  z-index: -1;
+  transform: scale(1, 1);
+  transition: 300ms ease-in-out;
+  border-radius: 1rem;
+}
+.front {
+  z-index: 3;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  transition: 300ms;
+  overflow: visible;
+}
+
+.back {
+  opacity: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: left;
+  flex-direction: column;
+  position: absolute;
+  padding-top: 5px;
+  left: 0;
+  right: 0;
+  padding-right: 5px;
+}
+
+.summary {
+  padding: 0px 16px;
+  width: 100%;
+  flex: 50%;
+  color: aliceblue;
+  overflow: scroll;
+  overflow-x: hidden;
+  text-align: justify;
+  display: -webkit-box;
+  -webkit-line-clamp: 8;
+  -webkit-box-orient: vertical;
+}
+
+.score-div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.score {
+  color: aliceblue;
+  text-align: center;
+  background-color: #2376dd;
+  width: 2.5em;
+  height: 1.5em;
+  border-radius: 5em;
+}
+
+.grid-item {
+  &:hover {
+    .front {
+      transform: translateY(-90%) scale(0.8);
+    }
+    .hover-background {
+      opacity: 1;
+      transform: scale(1.15, 1.43);
+    }
+    .back {
+      border-radius: 1rem;
+      opacity: 1;
+      transform: translateY(15%);
+    }
+  }
+}
+
+// GameIcon Styles
+.game-image-selected {
+  width: 106px;
+  height: 150px;
+  object-fit: fill;
+  aspect-ratio: 1/1;
+  border: solid 3px #FF597B;
+  transition: 300ms;
+}
+
+.game-image {
+  width: 106px;
+  height: 150px;
+  object-fit: fill;
+  aspect-ratio: 1/1;
+  border: solid 3px #F3CCFF;
+  &:hover {
+    cursor: pointer;
+  }
+  transition: 3000ms;
+}
+
+// GameRecs Styles
+.recs-container {
+  margin: 5px;
+  padding: 5px;
+  overflow-x: scroll;
+  overflow-y: scroll;
+  min-height: 80vh;
+  height: 80%;
+  width: 60%;
+  border-radius: 1rem;
+  background-color: rgba($color: #fff, $alpha: 0.7);
+  .game-title {
+    padding-top: 5px;
+    text-align: center;
+    color: #234;
+  }
+  h4 {
+    color: #234;
+    font-size: 1.4rem;
+    padding-top: 20px;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+}
+
+.recs {
+  gap: 2rem;
+}
+
+// GameCard Styles
+.card-container {
+  background-color: rgba($color: #fff, $alpha: 0.9);
+  width: 70vw;
+  height: 60vh;
+  border-radius: 10px;
+  .card-holder {
+    width: 70vw;
+    height: 60vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 2rem;
+    width: min(95%, 70rem);
+    margin-inline: auto;
+    overflow-y: scroll;
+    .card-title {
+      grid-column: span 4;
+    }
+    .card-img {
+      margin-top: 30px;
+      margin-left: 30px;
+      width: 106px;
+      height: 150px;
+      object-fit: fill;
+      grid-column: span 1;
+      box-shadow: 10px 15px 20px rgba($color: #000000, $alpha: 0.3);
+      border-radius: 10px;
+    }
+    .card-summary {
+      padding-top: 30px;
+      grid-column: span 3;
+      text-align: justify;
+      color: #234;
+    }
+  }
+}
+
+// SelectionHover Styles
+.selected-info {
+  color: whitesmoke;
+  position: fixed;
+  top: 50%;
+  right: 50%;
+  width: 500px;
+  height: 200px;
+  margin-top: -100px;
+  margin-right: -1000px;
+}
+
+.slected-hover-div {
+  z-index: 999;
+  position: fixed;
+  top: 50%;
+  right: 50%;
+  width: 520px;
+  height: 30px;
+  margin-top: -105px;
+  margin-right: -1000px;
+  border-radius: 2rem;
+  background-color: #b0235f;
 }
